Minor display fixes.
* Images had the ability to be too large for team members (fix: forced size)
* The menubar could be unshrunk on refresh (fix: run once on load and scroll)

--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -644,6 +644,8 @@ section h3.section-subheading {
 .team-member img {
     margin: 0 auto;
     border: 7px solid #fff;
+    width: 239px;
+    height: 239px;
 }
 
 .team-member h4 {
